fix(dialog): fix overlay not covering, dialog position in overlay
references #908

closes #1287

--- a/src/components/backdrop/backdrop-theme.scss
+++ b/src/components/backdrop/backdrop-theme.scss
@@ -1,4 +1,3 @@
 md-backdrop.md-opaque.md-THEME_NAME-theme {
   background-color: '{{foreground-4-0.5}}';
-  position: absolute
 }
