--- a/src/components/dialog/dialog.scss
+++ b/src/components/dialog/dialog.scss
@@ -3,10 +3,10 @@
   justify-content: center;
   align-items: center;
   position: absolute;
-  left: 0;
   top: 0;
-  right: 0;
-  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   z-index: $z-index-dialog;
 }
 
